crates/vize_patina/src/rules/script/no_potential_component_option_typo/snapshots/vize_patina__rules__script__no_potential_component_option_typo__tests__props_typo.snap
---
source: crates/vize_patina/src/rules/script/no_potential_component_option_typo.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/no-potential-component-option-typo",
        severity: Error,
        message: "'prop' is not a known component option; did you mean 'props'?",
        start: 20,
        end: 24,
        help: Some(
            "Rename this option to 'props'.",
        ),
        labels: [
            Label {
                message: "likely typo",
                start: 20,
                end: 24,
            },
        ],
        fix: None,
    },
]
